Try to fix FieldComparators for OrFields